--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       {name:"신유선",        drink:"원하는 음료 선택!!!",        image:"sinyuseon.png",      color:"#0984e3"},
       {name:"가보자고~~",   drink:"아이스아메리카노",         image:"gaboja.png",         color:"#d63031"},
       {name:"엄기종",        drink:"아이스아메리카노",         image:"eomgijong.png",      color:"#6c5ce7"},
-      {name:"이재승",        drink:"아샷추 2잔 with someone...", image:"leejaeseung.png",    color:"#00b894"},
+      {name:"이재승",        drink:"아샷추 2잔 !!!", image:"leejaeseung.png",    color:"#00b894"},
       {name:"전덕성(베드로)",drink:"아이스아메리카노",         image:"jeondeokseong.png",  color:"#fdcb6e"}
     ];
     // 2) 벌칙자 고정
