--- a/index.html
+++ b/index.html
@@ -1,43 +1,78 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <!-- 모바일 대응 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>사다리게임 애니메이션</title>
-
-  <!-- 카톡 링크 썸네일용 OG 태그 -->
-  <meta property="og:title" content="사다리게임">
-  <meta property="og:description" content="전체 결과 확인하기">
-  <meta property="og:image" content="https://raw.githubusercontent.com/Devil-Destroyer/ladder/main/ladder_thumbnail.png">
-  <meta property="og:url" content="https://devil-destroyer.github.io/ladder/">
-
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>사다리게임</title>
   <style>
-    body { margin:0; padding:1rem; font-family:sans-serif; background:#fafafa; text-align:center; }
-    h1 { margin-bottom:1rem; }
-    button { margin-bottom:1rem; padding:.5rem 1rem; font-size:1rem; }
-    #canvas-wrap { overflow-x:auto; }
-    canvas { background:#fff; display:block; margin:0 auto; }
-    #results { margin-top:1rem; list-style:none; padding:0; text-align:left; display:inline-block; }
-    #results li { margin:.5rem 0; }
-    .punishment { color:#e74c3c; font-weight:bold; }
-    .winner     { color:#27ae60; font-weight:bold; }
+    body{margin:0;padding:0;background:#000208;color:#fff;font-family:sans-serif;display:flex;justify-content:center;}
+    .container{width:360px;}
+    h1{margin:16px 0;text-align:center;}
+    button{margin:8px auto;display:block;padding:8px 16px;font-size:16px;border:none;border-radius:4px;cursor:pointer;}
+    #startBtn{background:#ffcd00;color:#000;}
+    #canvas-wrap{overflow-x:auto;}
+    canvas{background:#fff;display:block;margin:0 auto;border-radius:4px;}
+    #results{margin-top:16px;list-style:none;padding:0;text-align:left;}
+    #results li{margin:4px 0;}
+    .punishment{color:#e74c3c;font-weight:bold;}
+    .winner{color:#27ae60;font-weight:bold;}
+
+    /* 카톡 결과 카드 */
+    .kakao-card{display:none;background:#1f2127;border-radius:8px;overflow:hidden;box-shadow:0 4px 12px rgba(0,0,0,.5);margin-top:16px;}
+    .kakao-header{display:flex;justify-content:space-between;padding:12px;}
+    .kakao-header button{background:transparent;border:none;color:#fff;font-size:16px;cursor:pointer;}
+    .kakao-body{text-align:center;padding:0 0 16px;}
+    .result-text{margin:12px 0 8px;font-size:18px;}
+    .result-text .name{color:#fff;}
+    .result-text .icon{color:#ff695f;}
+    .avatar{width:120px;height:120px;margin:0 auto;border-radius:50%;overflow:hidden;border:4px solid #2a2d33;}
+    .avatar img{width:100%;height:100%;object-fit:cover;}
+    .share-btn{width:100%;padding:12px;background:#1a73e8;color:#fff;font-size:16px;border:none;cursor:pointer;}
+    .tags{display:flex;justify-content:space-around;padding:8px;background:#25272d;}
+    .tags span{color:#aaa;font-size:12px;cursor:pointer;}
   </style>
 </head>
 <body>
-  <h1>🎯 사다리게임</h1>
-  <button id="startBtn">사다리 타기</button>
-  <div id="canvas-wrap">
-    <canvas id="ladder"></canvas>
+  <div class="container">
+    <h1>🎯 사다리게임</h1>
+    <button id="startBtn">사다리 타기</button>
+
+    <!-- 애니메이션 영역 -->
+    <div id="canvas-wrap">
+      <canvas id="ladder"></canvas>
+    </div>
+    <ul id="results"></ul>
+
+    <!-- 카톡 결과 카드 -->
+    <div class="kakao-card" id="kakaoCard">
+      <div class="kakao-header">
+        <button id="btnBack">&lt; 사다리화면</button>
+        <button id="btnReload">⟳</button>
+      </div>
+      <div class="kakao-body">
+        <div class="result-text">
+          <span class="name" id="resultName">Name</span>님이 
+          <span class="icon" id="resultIcon">꽝!</span> 입니다~
+        </div>
+        <div class="avatar">
+          <img id="resultImg" src="" alt="프로필"/>
+        </div>
+      </div>
+      <button class="share-btn" id="btnShare">공유하기</button>
+      <div class="tags">
+        <span>#사다리타기</span>
+        <span>#카톡사다리게임</span>
+        <span>#네이버사다리게임</span>
+      </div>
+    </div>
   </div>
-  <ul id="results"></ul>
 
   <script>
-    // 1) 참가자 + 음료 + 프로필 이미지 파일명 + 색
+    // 참가자 & 벌칙자 정의
     const participants = [
       {name:"Jinsoo",        drink:"아이스아메리카노",         image:"Jinsoo.png",          color:"#3498db"},
       {name:"세미",          drink:"원하는 음료 선택!!!",        image:"semi.png",           color:"#9b59b6"},
-      {name:"구자건",        drink:"아이스아메리카노",         image:"guagain.png",        color:"#e67e22"},
+      {name:"구자건",        drink:"아이스아메리카노",         image:"gujagun.png",        color:"#e67e22"},
       {name:"김만성",        drink:"아이스아메리카노",         image:"kimmanseong.png",     color:"#1abc9c"},
       {name:"김세봉",        drink:"원하는 음료 선택!!!",        image:"kimsebung.png",      color:"#f1c40f"},
       {name:"김철동",        drink:"아이스아메리카노",         image:"kimcheoldong.png",    color:"#e84393"},
@@ -45,179 +80,130 @@
       {name:"신유선",        drink:"원하는 음료 선택!!!",        image:"sinyuseon.png",      color:"#0984e3"},
       {name:"가보자고~~",   drink:"아이스아메리카노",         image:"gaboja.png",         color:"#d63031"},
       {name:"엄기종",        drink:"아이스아메리카노",         image:"eomgijong.png",      color:"#6c5ce7"},
-      {name:"이재승",        drink:"아샷추 2잔 !!!", image:"leejaeseung.png",    color:"#00b894"},
+      {name:"이재승",        drink:"아샷추 2잔 with someone...", image:"leejaeseung.png",    color:"#00b894"},
       {name:"전덕성(베드로)",drink:"아이스아메리카노",         image:"jeondeokseong.png",  color:"#fdcb6e"}
     ];
-    // 2) 벌칙자 고정
     const punishment = {name:"임상혁", drink:"축~당첨: 딸기요거트샷추가", image:"imsanghyuk.png", color:"#e74c3c"};
 
     const all = [punishment, ...participants];
     const cols = all.length, rows = 12;
 
-    // 레이아웃 상수
-    const marginX = 50, marginY = 20;
-    const imgH = 40, nameH = 20;
-    const colW = 100, rowH = 30;
-    const cw = marginX*2 + colW*(cols-1);
-    const ch = marginY*2 + imgH + nameH + rowH*rows;
+    // 레이아웃
+    const marginX=50, marginY=20, imgH=40, nameH=20;
+    const colW=100, rowH=30;
+    const cw=marginX*2 + colW*(cols-1);
+    const ch=marginY*2 + imgH + nameH + rowH*rows;
 
     // 캔버스 세팅
-    const canvas = document.getElementById('ladder');
-    canvas.width = cw;
-    canvas.height = ch;
-    const ctx = canvas.getContext('2d');
+    const canvas=document.getElementById('ladder');
+    canvas.width=cw; canvas.height=ch;
+    const ctx=canvas.getContext('2d');
 
-    // 사다리 가로줄 랜덤 생성
-    const rungs = Array.from({length: rows}, () =>
-      Array.from({length: cols - 1}, () => Math.random() < 0.4)
-    );
+    // 가로줄 랜덤 생성
+    const rungs=Array.from({length:rows},()=>Array.from({length:cols-1},()=>Math.random()<0.4));
 
-    // 3) 프로필 이미지 로드 (루트 폴더 기준)
-    const baseUrl = 'https://raw.githubusercontent.com/Devil-Destroyer/ladder/main/';
-    const images = all.map(p => {
-      const img = new Image();
-      img.src = baseUrl + encodeURIComponent(p.image);
-      img.onload = drawLadder;
-      img.onerror = drawLadder;
+    // 이미지 로드
+    const baseUrl='https://raw.githubusercontent.com/Devil-Destroyer/ladder/main/';
+    const images=all.map(p=>{
+      const img=new Image();
+      img.src=baseUrl+encodeURIComponent(p.image);
+      img.onload=drawLadder; img.onerror=drawLadder;
       return img;
     });
 
-    // 4) 사다리판 + 프로필 + 이름 + 기본 회색선 + 가로막대 그리기
-    function drawLadder() {
-      ctx.clearRect(0, 0, cw, ch);
-      ctx.font = "14px sans-serif";
-
-      // 프로필 & 이름
-      all.forEach((p, i) => {
-        const x = marginX + i * colW;
-        // 이미지
-        if (images[i].complete && images[i].naturalWidth > 0) {
-          ctx.drawImage(images[i], x - 20, marginY, 40, imgH);
+    // 사다리판 그리기
+    function drawLadder(){
+      ctx.clearRect(0,0,cw,ch);
+      ctx.font="14px sans-serif";
+      all.forEach((p,i)=>{
+        const x=marginX+i*colW;
+        if(images[i].complete && images[i].naturalWidth>0){
+          ctx.drawImage(images[i],x-20,marginY,40,imgH);
         } else {
-          ctx.fillStyle = "#ccc";
-          ctx.fillRect(x - 20, marginY, 40, imgH);
+          ctx.fillStyle="#ccc";
+          ctx.fillRect(x-20,marginY,40,imgH);
         }
-        // 이름
-        ctx.fillStyle = "#333";
-        ctx.textAlign = "center";
-        ctx.fillText(p.name, x, marginY + imgH + nameH - 4);
+        ctx.fillStyle="#333"; ctx.textAlign="center";
+        ctx.fillText(p.name,x,marginY+imgH+nameH-4);
       });
-
-      // 기본 세로선
-      ctx.strokeStyle = "#ccc";
-      ctx.lineWidth = 2;
-      for (let i = 0; i < cols; i++) {
-        const x = marginX + i * colW;
-        ctx.beginPath();
-        ctx.moveTo(x, marginY + imgH + nameH);
-        ctx.lineTo(x, marginY + imgH + nameH + rowH * rows);
+      ctx.strokeStyle="#ccc"; ctx.lineWidth=2;
+      for(let i=0;i<cols;i++){
+        const x=marginX+i*colW;
+        ctx.beginPath(); ctx.moveTo(x,marginY+imgH+nameH);
+        ctx.lineTo(x,marginY+imgH+nameH+rowH*rows);
         ctx.stroke();
       }
-
-      // 가로막대
-      for (let y = 0; y < rows; y++) {
-        for (let x = 0; x < cols - 1; x++) {
-          if (rungs[y][x]) {
-            const x1 = marginX + x * colW;
-            const y1 = marginY + imgH + nameH + y * rowH;
-            ctx.beginPath();
-            ctx.moveTo(x1, y1);
-            ctx.lineTo(x1 + colW, y1);
+      for(let y=0;y<rows;y++){
+        for(let x=0;x<cols-1;x++){
+          if(rungs[y][x]){
+            const x1=marginX+x*colW;
+            const y1=marginY+imgH+nameH+y*rowH;
+            ctx.beginPath(); ctx.moveTo(x1,y1); ctx.lineTo(x1+colW,y1);
             ctx.stroke();
           }
         }
       }
     }
 
-    // 5) 경로 계산 (90° 지그재그)
-    function computePaths() {
-      return all.map((_, idx) => {
-        let cx = idx, cy = 0;
-        const path = [{x: cx, y: cy}];
-        for (let y = 0; y < rows; y++) {
-          if (rungs[y][cx]) {
-            cx++;
-            path.push({x: cx, y: y});
-          } else if (cx > 0 && rungs[y][cx - 1]) {
-            cx--;
-            path.push({x: cx, y: y});
+    // 경로 계산
+    function computePaths(){
+      return all.map((_,idx)=>{
+        let cx=idx; const path=[{x:cx,y:0}];
+        for(let y=0;y<rows;y++){
+          if(rungs[y][cx]){
+            cx++; path.push({x:cx,y:y});
+          } else if(cx>0 && rungs[y][cx-1]){
+            cx--; path.push({x:cx,y:y});
           }
-          path.push({x: cx, y: y + 1});
+          path.push({x:cx,y:y+1});
         }
         return path;
       });
     }
 
-    // 6) 애니메이션: 한 사람씩 차례대로
-    function animate() {
+    // 애니메이션
+    function animate(){
       drawLadder();
-      const paths = computePaths();
-      let i = 0;
-
-      function drawOne() {
-        const path = paths[i];
-        let step = 0;
-        ctx.lineWidth = 4;
-        ctx.strokeStyle = all[i].color;
-
-        const timer = setInterval(() => {
-          if (step > 0) {
-            const p0 = path[step - 1], p1 = path[step];
-            const x0 = marginX + p0.x * colW;
-            const y0 = marginY + imgH + nameH + p0.y * rowH;
-            const x1 = marginX + p1.x * colW;
-            const y1 = marginY + imgH + nameH + p1.y * rowH;
-            ctx.beginPath();
-            ctx.moveTo(x0, y0);
-            ctx.lineTo(x1, y1);
-            ctx.stroke();
+      const paths=computePaths();
+      let i=0;
+      function drawOne(){
+        const path=paths[i]; let step=0;
+        ctx.lineWidth=4; ctx.strokeStyle=all[i].color;
+        const timer=setInterval(()=>{
+          if(step>0){
+            const p0=path[step-1], p1=path[step];
+            const x0=marginX+p0.x*colW, y0=marginY+imgH+nameH+p0.y*rowH;
+            const x1=marginX+p1.x*colW, y1=marginY+imgH+nameH+p1.y*rowH;
+            ctx.beginPath(); ctx.moveTo(x0,y0); ctx.lineTo(x1,y1); ctx.stroke();
           }
           step++;
-          if (step >= path.length) {
+          if(step>=path.length){
             clearInterval(timer);
             i++;
-            if (i < paths.length) {
-              setTimeout(drawOne, 200);
-            } else {
-              showResults();
-            }
+            if(i<paths.length) setTimeout(drawOne,200);
+            else showResults();
           }
-        }, 100);
+        },100);
       }
-
       drawOne();
     }
 
-    // 7) 결과 하이라이트
-    function showResults() {
-      const ul = document.getElementById('results');
-      ul.innerHTML = '';
-
-      // 벌칙자
-      const li0 = document.createElement('li');
-      li0.className = 'punishment';
-      li0.textContent = 🏴 ${punishment.name} → ${punishment.drink};
-      ul.appendChild(li0);
-
-      // 샷 당첨자
-      const winner = participants.find(p => p.drink.includes('샷'));
-      const li1 = document.createElement('li');
-      li1.className = 'winner';
-      li1.textContent = 🎉 ${winner.name} → ${winner.drink};
-      ul.appendChild(li1);
-
-      // 나머지
-      participants.forEach(p => {
-        if (p !== winner) {
-          const li = document.createElement('li');
-          li.textContent = ${p.name} → ${p.drink};
-          ul.appendChild(li);
-        }
-      });
+    // 결과 표시 & 카드 전환
+    function showResults(){
+      document.getElementById('canvas-wrap').style.display='none';
+      const card=document.getElementById('kakaoCard');
+      card.style.display='block';
+      document.getElementById('resultName').textContent = punishment.name;
+      document.getElementById('resultIcon').textContent = '꽝!';
+      document.getElementById('resultImg').src         = baseUrl + encodeURIComponent(punishment.image);
     }
 
-    document.getElementById('startBtn').addEventListener('click', animate);
-    // 페이지 로드 시 기본판 그리기
+    // 카드 버튼
+    document.getElementById('btnBack').onclick=()=>location.reload();
+    document.getElementById('btnReload').onclick=()=>location.reload();
+    document.getElementById('btnShare').onclick=()=>alert('공유하기 클릭됨');
+
+    document.getElementById('startBtn').addEventListener('click',animate);
     drawLadder();
   </script>
 </body>
